# yolo-auto-trainning

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GPU_DEPLOYMENT.md  GPU_SERVER_SETUP.md  MANUAL_DEPLOY.md  README.md  README_zh.md  SESSION_SUMMARY.md  alertmanager.yml  alerts.yml  deploy_gpu.sh  deploy_online.sh  docker-compose.logging.yml  docker-compose.monitoring.yml  docker-compose.yml  dvc.yaml  findings.md  findings_react_migration.md  fluent-bit.conf  manual_deploy.sh  parsers.conf  progress.md  prometheus.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  task_plan.md  task_plan_react_migration.md
business-api/: .env.example  Dockerfile  docker-compose.yml  pytest.ini  requirements.txt
colab/: README.md  quick_test.sh  yolo_auto_training_colab.ipynb
design-docs/: 1-Overall-Design-v4.md  1-Overall-Design-v5.md  1-Overall-Design-v6.md  1-Overall-Design.md  10-Final-Review-v10.md  11-Distributed-Architecture-v7.md  12-Design-Review-2026-03-17.md  2-DataDiscovery-Module-v5.md  2-DataGeneration-Module-v4.md  2-DataGeneration-Module.md  3-ComfyUI-Workflow-Generator-v5.md  3-Training-Module-v4.md  3-Training-Module.md  4-Deployment-Module-v4.md  4-Deployment-Module.md  4-Training-Module-v5.md  4-Training-Module-v6.md  5-AgentOrchestration-Module-v4.md  5-AgentOrchestration-Module-v5.md  5-AgentOrchestration-Module-v6.md  5-AgentOrchestration-Module.md  5-Deployment-Module-v5.md  6-APIService-Module-v4.md  6-APIService-Module-v5.md  6-APIService-Module-v6.md  6-APIService-Module.md  7-Design-Review-v6.md  8-Design-Review-v8.md  (+6 more)
(+135 files in other folders)
